crates/ink-rs/src/ffi/generated.rs

        unsafe extern "C" {
            pub fn BrushColor(
                brush: root::ink_ffi::BrushHandle,
                color_format: root::ink_ffi::ColorFormat,
            ) -> root::ink_ffi::Rgba;
        }
        unsafe extern "C" {
            pub fn BrushColorSpace(brush: root::ink_ffi::BrushHandle) -> root::ink_ffi::ColorSpace;
        }
        unsafe extern "C" {
            pub fn BrushCoatCount(brush: root::ink_ffi::BrushHandle) -> u32;
        }
        unsafe extern "C" {
            pub fn BrushGetFamily(
                brush: root::ink_ffi::BrushHandle,
            ) -> root::ink_ffi::BrushFamilyHandle;
        }
        unsafe extern "C" {
            pub fn BrushSetSize(
                brush: root::ink_ffi::BrushHandle,
                size: f32,
            ) -> root::ink_ffi::StatusCode;
        }
        unsafe extern "C" {
            pub fn BrushSetEpsilon(
                brush: root::ink_ffi::BrushHandle,
                epsilon: f32,
            ) -> root::ink_ffi::StatusCode;
        }
        unsafe extern "C" {
            pub fn BrushSetColor(
                brush: root::ink_ffi::BrushHandle,
                color: root::ink_ffi::Rgba,
                color_space: root::ink_ffi::ColorSpace,
                color_format: root::ink_ffi::ColorFormat,
            );
        }
        unsafe extern "C" {
            pub fn BrushSetFamily(
                brush: root::ink_ffi::BrushHandle,
                family: root::ink_ffi::BrushFamilyHandle,
            );
        }
        unsafe extern "C" {
            pub fn StrokeInputBatchCreate(
                inputs: *const root::ink_ffi::StrokeInput,
                count: i32,
                noise_seed: u32,
                base_paint_animation_phase: f32,
                out: *mut root::ink_ffi::StrokeInputBatchHandle,
            ) -> root::ink_ffi::StatusCode;
        }
        unsafe extern "C" {
            pub fn StrokeInputBatchClone(
                batch: root::ink_ffi::StrokeInputBatchHandle,
            ) -> root::ink_ffi::StrokeInputBatchHandle;
        }
        unsafe extern "C" {
            pub fn StrokeInputBatchDestroy(batch: root::ink_ffi::StrokeInputBatchHandle);
        }
        unsafe extern "C" {
            pub fn StrokeInputBatchSize(batch: root::ink_ffi::StrokeInputBatchHandle) -> i32;
        }
        unsafe extern "C" {
            pub fn StrokeInputBatchGet(
                batch: root::ink_ffi::StrokeInputBatchHandle,
                index: i32,
            ) -> root::ink_ffi::StrokeInput;
        }
        unsafe extern "C" {
            pub fn StrokeInputBatchAppend(
                batch: root::ink_ffi::StrokeInputBatchHandle,
                input: root::ink_ffi::StrokeInput,
            ) -> root::ink_ffi::StatusCode;
        }
        unsafe extern "C" {
            pub fn StrokeInputBatchAppendBatch(
                batch: root::ink_ffi::StrokeInputBatchHandle,
                inputs: root::ink_ffi::StrokeInputBatchHandle,
            ) -> root::ink_ffi::StatusCode;
        }
        unsafe extern "C" {
            pub fn StrokeInputBatchClear(batch: root::ink_ffi::StrokeInputBatchHandle);
        }
        unsafe extern "C" {
            pub fn StrokeInputBatchDurationSeconds(
                batch: root::ink_ffi::StrokeInputBatchHandle,
            ) -> f32;
        }
        unsafe extern "C" {
            pub fn StrokeInputBatchToolType(
                batch: root::ink_ffi::StrokeInputBatchHandle,
            ) -> root::ink_ffi::ToolType;
        }
        unsafe extern "C" {
            pub fn StrokeInputBatchNoiseSeed(batch: root::ink_ffi::StrokeInputBatchHandle) -> u32;
        }
        unsafe extern "C" {
            pub fn InProgressStrokeCreate() -> root::ink_ffi::InProgressStrokeHandle;
        }
        unsafe extern "C" {
            pub fn InProgressStrokeDestroy(stroke: root::ink_ffi::InProgressStrokeHandle);
        }
        unsafe extern "C" {
            pub fn InProgressStrokeClear(stroke: root::ink_ffi::InProgressStrokeHandle);
        }
        unsafe extern "C" {
            pub fn InProgressStrokeStart(
                stroke: root::ink_ffi::InProgressStrokeHandle,
                brush: root::ink_ffi::BrushHandle,
                noise_seed: u32,
                base_animation_phase: f32,
            );
        }
        unsafe extern "C" {
            pub fn InProgressStrokeEnqueueInputs(
                stroke: root::ink_ffi::InProgressStrokeHandle,
                real_inputs: root::ink_ffi::StrokeInputBatchHandle,
                predicted_inputs: root::ink_ffi::StrokeInputBatchHandle,
            ) -> root::ink_ffi::StatusCode;
        }
        unsafe extern "C" {
            pub fn InProgressStrokeFinishInputs(stroke: root::ink_ffi::InProgressStrokeHandle);
        }
        unsafe extern "C" {
            pub fn InProgressStrokeUpdateShape(
                stroke: root::ink_ffi::InProgressStrokeHandle,
                current_elapsed_seconds: f32,
            ) -> root::ink_ffi::StatusCode;
        }
        unsafe extern "C" {
            pub fn InProgressStrokeNeedsUpdate(
                stroke: root::ink_ffi::InProgressStrokeHandle,
            ) -> bool;
        }
        unsafe extern "C" {
            pub fn InProgressStrokeInputsAreFinished(
                stroke: root::ink_ffi::InProgressStrokeHandle,
            ) -> bool;
        }
        unsafe extern "C" {
            pub fn InProgressStrokeChangesWithTime(
                stroke: root::ink_ffi::InProgressStrokeHandle,
            ) -> bool;
        }
        unsafe extern "C" {
            pub fn InProgressStrokeBrushCoatCount(
                stroke: root::ink_ffi::InProgressStrokeHandle,
            ) -> u32;
        }
        unsafe extern "C" {
            pub fn InProgressStrokeInputCount(stroke: root::ink_ffi::InProgressStrokeHandle)
            -> i32;
        }
        unsafe extern "C" {
            pub fn InProgressStrokeRealInputCount(
                stroke: root::ink_ffi::InProgressStrokeHandle,
            ) -> i32;
        }
        unsafe extern "C" {
            pub fn InProgressStrokeVertexCount(
                stroke: root::ink_ffi::InProgressStrokeHandle,
                coat_index: u32,
            ) -> u32;
        }
        unsafe extern "C" {
            pub fn InProgressStrokeTriangleCount(
                stroke: root::ink_ffi::InProgressStrokeHandle,
                coat_index: u32,
            ) -> u32;
        }
        unsafe extern "C" {
            pub fn InProgressStrokeCopyVertexPositions(
                stroke: root::ink_ffi::InProgressStrokeHandle,
                coat_index: u32,
                out: *mut root::ink_ffi::Point,
                capacity: i32,
            ) -> i32;
        }
        unsafe extern "C" {
            pub fn InProgressStrokeCopyTriangleIndices(
                stroke: root::ink_ffi::InProgressStrokeHandle,
                coat_index: u32,
                out: *mut u32,
                capacity: i32,
            ) -> i32;
        }
        unsafe extern "C" {
            pub fn InProgressStrokeCoatBounds(
                stroke: root::ink_ffi::InProgressStrokeHandle,
                coat_index: u32,
                out: *mut root::ink_ffi::Rect,
            ) -> bool;
        }
        unsafe extern "C" {
            pub fn InProgressStrokeCopyToStroke(
                stroke: root::ink_ffi::InProgressStrokeHandle,
            ) -> root::ink_ffi::StrokeHandle;
        }
        unsafe extern "C" {
            pub fn StrokeCreate(
                brush: root::ink_ffi::BrushHandle,
                inputs: root::ink_ffi::StrokeInputBatchHandle,
            ) -> root::ink_ffi::StrokeHandle;
        }
        unsafe extern "C" {
            pub fn StrokeClone(stroke: root::ink_ffi::StrokeHandle) -> root::ink_ffi::StrokeHandle;
        }
        unsafe extern "C" {
            pub fn StrokeDestroy(stroke: root::ink_ffi::StrokeHandle);
        }
        unsafe extern "C" {
            pub fn StrokeInputDurationSeconds(stroke: root::ink_ffi::StrokeHandle) -> f32;
        }
        unsafe extern "C" {
            pub fn StrokeGetBrush(
                stroke: root::ink_ffi::StrokeHandle,
            ) -> root::ink_ffi::BrushHandle;
        }
        unsafe extern "C" {
            pub fn StrokeGetInputs(
                stroke: root::ink_ffi::StrokeHandle,
            ) -> root::ink_ffi::StrokeInputBatchHandle;
        }
        unsafe extern "C" {
            pub fn StrokeRenderGroupCount(stroke: root::ink_ffi::StrokeHandle) -> u32;
        }
        unsafe extern "C" {
            pub fn StrokeRenderGroupMeshCount(
                stroke: root::ink_ffi::StrokeHandle,
                group_index: u32,
            ) -> u32;
        }
        unsafe extern "C" {
            pub fn StrokeMeshVertexCount(
                stroke: root::ink_ffi::StrokeHandle,
                group_index: u32,
                mesh_index: u32,
            ) -> u32;
        }
        unsafe extern "C" {
            pub fn StrokeMeshTriangleCount(
                stroke: root::ink_ffi::StrokeHandle,
                group_index: u32,
                mesh_index: u32,
            ) -> u32;
        }
        unsafe extern "C" {
            pub fn StrokeCopyMeshVertexPositions(
                stroke: root::ink_ffi::StrokeHandle,
                group_index: u32,
                mesh_index: u32,
                out: *mut root::ink_ffi::Point,
                capacity: i32,
            ) -> i32;
        }
        unsafe extern "C" {
            pub fn StrokeCopyMeshTriangleIndices(
                stroke: root::ink_ffi::StrokeHandle,
                group_index: u32,
                mesh_index: u32,
                out: *mut u32,
                capacity: i32,
            ) -> i32;
        }
        unsafe extern "C" {
            pub fn StrokeBounds(
                stroke: root::ink_ffi::StrokeHandle,
                out: *mut root::ink_ffi::Rect,
            ) -> bool;
        }
    }
}
